[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "jbxapi"
description = 'API for Joe Sandbox'
authors = [
    {name = "Joe Security LLC"},
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=2.7, !=3.0, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"

dependencies = [
    'requests >=2.18.4,<3',
    # for decrypting zip files
    'pyzipper >=0.3.1; python_version >="3.5"',
]

keywords=["security", "malware", "sandbox", "sandboxing", "joe"]
classifiers = [
    'Development Status :: 5 - Production/Stable',

    'Intended Audience :: Developers',
    'Topic :: Security',

    'License :: OSI Approved :: MIT License',

    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
]

[project.scripts]
jbxapi = "jbxapi:main"

[project.urls]
Homepage = "https://github.com/joesecurity/jbxapi"
